Increase regions per second; player info

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,6 +18,7 @@ commands:
       /dec cancel
       /dec info
       /dec fake
+      /dec players
     permission: decorator.decorator
 permissions:
   decorator.decorator:
