--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <repositories>
+    <!-- Jitpack Repo -->
     <repository>
       <id>jitpack.io</id>
       <url>https://jitpack.io</url>
@@ -20,13 +21,18 @@
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
     </repository>
+    <!-- Cavetale Repo -->
+    <repository>
+      <id>cavetale</id>
+      <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
+    </repository>
   </repositories>
   <dependencies>
     <!-- Spigot-API -->
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.13.1-R0.1-SNAPSHOT</version>
+      <version>1.13.2-R0.1-SNAPSHOT</version>
     </dependency>
     <!-- Lombok -->
     <dependency>
@@ -39,7 +45,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcprotocollib</artifactId>
-      <version>1.13.1-1-SNAPSHOT</version>
+      <version>1.13.2-1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.github.steveice10</groupId>
