--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,4 @@ memory-threshold: 128 # In MiB
 memory-wait-time: 30 # In seconds
 player-populate-interval: 20 # In ticks
 low-mem-restart-threshold: 10 # Times of low memory
+batch-mode: false # Automatic shutdowns and such
