--- a/pom.xml
+++ b/pom.xml
@@ -11,57 +11,53 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <repositories>
-    <!-- Jitpack Repo -->
-    <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
-    </repository>
-    <!-- Spigot Repo -->
-    <repository>
-      <id>spigot-repo</id>
-      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-    </repository>
+
     <!-- Cavetale Repo -->
     <repository>
       <id>cavetale</id>
       <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
     </repository>
+
+    <!-- Jitpack Repo -->
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+
+    <!-- Spigot Repo -->
+    <repository>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+
   </repositories>
   <dependencies>
+
     <!-- Spigot-API -->
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.13.2-R0.1-SNAPSHOT</version>
+      <version>1.14.4-R0.1-SNAPSHOT</version>
+      <optional>true</optional>
     </dependency>
+
     <!-- Lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.14.8</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
+
     <!-- MCProtocolLib -->
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcprotocollib</artifactId>
-      <version>1.13.2-1-SNAPSHOT</version>
+      <version>1.14.4-SNAPSHOT</version>
+      <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
-    <dependency>
-      <groupId>com.github.steveice10</groupId>
-      <artifactId>opennbt</artifactId>
-      <version>1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.steveice10</groupId>
-      <artifactId>packetlib</artifactId>
-      <version>1.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.github.steveice10</groupId>
-      <artifactId>mcauthlib</artifactId>
-      <version>1.0</version>
-    </dependency>
+
   </dependencies>
   <build>
     <finalName>${project.name}</finalName>
