--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project>
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>com.winthier.decorator</groupId>
   <artifactId>decorator</artifactId>
-  <packaging>jar</packaging>
   <version>0.1-SNAPSHOT</version>
+
+  <packaging>jar</packaging>
   <name>Decorator</name>
-  <url>https://cavetale.com</url>
+  <url>https://github.com/StarTux/Decorator</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -31,7 +32,7 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.15.1-R0.1-SNAPSHOT</version>
+      <version>1.15.2-R0.1-SNAPSHOT</version>
       <optional>true</optional>
     </dependency>
 
@@ -47,7 +48,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcprotocollib</artifactId>
-      <version>1.15.1-1-SNAPSHOT</version>
+      <version>1.15.2-1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
