--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
+main: com.winthier.decorator.DecoratorPlugin
 name: Decorator
 description: Populate world chunks by teleporting players around.
 author: StarTux
 version: 0.1
 api-version: 1.13
-website: https://cavetale.com
-main: com.winthier.decorator.DecoratorPlugin
+website: https://github.com/StarTux/Decorator
 depend: [ ]
 commands:
   decorator:
