--- a/pom.xml
+++ b/pom.xml
@@ -19,20 +19,21 @@
       <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
     </repository>
 
-    <!-- Spigot Repo -->
+    <!-- Paper Repo -->
     <repository>
-      <id>spigot-repo</id>
-      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+      <id>papermc</id>
+      <url>https://papermc.io/repo/repository/maven-public/</url>
     </repository>
 
   </repositories>
   <dependencies>
 
-    <!-- Spigot-API -->
+    <!-- Paper API -->
     <dependency>
-      <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
+      <groupId>com.destroystokyo.paper</groupId>
+      <artifactId>paper-api</artifactId>
       <version>1.15.2-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
       <optional>true</optional>
     </dependency>
 
