--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,11 +1,16 @@
 main: com.winthier.decorator.DecoratorPlugin
+
 name: Decorator
 description: Populate world chunks by teleporting players around.
-author: StarTux
 version: 0.1
 api-version: 1.13
+
+author: StarTux
 website: https://github.com/StarTux/Decorator
-depend: [ ]
+
+depend: []
+softdepend: [Worlds]
+
 commands:
   decorator:
     aliases: [ dec ]
@@ -20,6 +25,7 @@ commands:
       /dec fake
       /dec players
     permission: decorator.decorator
+
 permissions:
   decorator.decorator:
     description: Use the "/decorator" command.
