--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,4 +2,5 @@ fake-players: 5
 memory-threshold: 32 # In MiB
 memory-wait-time: 30 # In seconds
 player-populate-interval: 20 # In ticks
+milliseconds-per-tick: 50
 batch-mode: false # Automatic shutdowns and such
