--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,15 @@
       <scope>compile</scope>
     </dependency>
 
+    <!-- Dirty -->
+    <dependency>
+      <groupId>com.cavetale.dirty</groupId>
+      <artifactId>dirty</artifactId>
+      <version>0.1-SNAPSHOT</version>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>${project.name}</finalName>
