--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,7 +8,7 @@ api-version: 1.13
 author: StarTux
 website: https://github.com/StarTux/Decorator
 
-depend: []
+depend: [Dirty]
 softdepend: [Worlds]
 
 commands:
