--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
 
     <!-- Paper API -->
     <dependency>
-      <groupId>com.destroystokyo.paper</groupId>
+      <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.16.5-R0.1-SNAPSHOT</version>
+      <version>1.17.1-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcprotocollib</artifactId>
-      <version>1.16.4-SNAPSHOT</version>
+      <version>1.17.1-1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
@@ -57,7 +57,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>opennbt</artifactId>
-      <version>1.4-SNAPSHOT</version>
+      <version>1.5-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
@@ -65,7 +65,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>packetlib</artifactId>
-      <version>1.8-SNAPSHOT</version>
+      <version>2.1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
@@ -96,8 +96,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.2</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>16</source>
+          <target>16</target>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
           <compilerArgs>
