--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <url>https://papermc.io/repo/repository/maven-public/</url>
     </repository>
 
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+
   </repositories>
   <dependencies>
 
@@ -32,9 +37,8 @@
     <dependency>
       <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.17.1-R0.1-SNAPSHOT</version>
+      <version>1.18.1-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
-      <optional>true</optional>
     </dependency>
 
     <!-- Lombok -->
@@ -49,7 +53,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcprotocollib</artifactId>
-      <version>1.17.1-1-SNAPSHOT</version>
+      <version>1.18-2</version>
       <scope>compile</scope>
     </dependency>
 
@@ -57,7 +61,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>opennbt</artifactId>
-      <version>1.5-SNAPSHOT</version>
+      <version>1.4</version> <!-- Copied from MCProtocolLib -->
       <scope>compile</scope>
     </dependency>
 
@@ -65,7 +69,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>packetlib</artifactId>
-      <version>2.1-SNAPSHOT</version>
+      <version>2.1</version> <!-- Copied from MCProtocolLib -->
       <scope>compile</scope>
     </dependency>
 
@@ -73,7 +77,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcauthlib</artifactId>
-      <version>1.4-SNAPSHOT</version>
+      <version>6f3d6aada5</version> <!-- Copied from MCProtocolLib -->
       <scope>compile</scope>
     </dependency>
 
@@ -83,7 +87,6 @@
       <artifactId>dirty</artifactId>
       <version>0.1-SNAPSHOT</version>
       <scope>provided</scope>
-      <optional>true</optional>
     </dependency>
 
   </dependencies>
@@ -124,6 +127,8 @@
                   <include>com.github.steveice10:opennbt</include>
                   <include>com.github.steveice10:packetlib</include>
                   <include>com.github.steveice10:mcauthlib</include>
+		  <include>net.kyori:adventure-text-serializer-gson-legacy-impl</include>
+		  <include>net.kyori:adventure-nbt</include>
                 </includes>
               </artifactSet>
               <filters>
@@ -150,6 +155,18 @@
                   <includes>
                     <include>com/github/steveice10/**</include>
                     <include>yggdrasil_session_pubkey.der</include>
+                  </includes>
+                </filter>
+                <filter>
+                  <artifact>net.kyori:adventure-text-serializer-gson-legacy-impl</artifact>
+                  <includes>
+                    <include>**</include>
+                  </includes>
+                </filter>
+                <filter>
+                  <artifact>net.kyori:adventure-nbt</artifact>
+                  <includes>
+                    <include>**</include>
                   </includes>
                 </filter>
               </filters>
