--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcprotocollib</artifactId>
-      <version>1.18-3</version>
+      <version>1.18.2-1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
