--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,28 @@
       <url>https://jitpack.io</url>
     </repository>
 
+    <!-- Math -->
+    <repository>
+      <id>opencollab-release-repo</id>
+      <url>https://repo.opencollab.dev/maven-releases/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>opencollab-snapshot-repo</id>
+      <url>https://repo.opencollab.dev/maven-snapshots/</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+
   </repositories>
   <dependencies>
 
@@ -38,7 +60,7 @@
     <dependency>
       <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.18.2-R0.1-SNAPSHOT</version>
+      <version>1.19-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
@@ -55,7 +77,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcprotocollib</artifactId>
-      <version>1.18.2-1-SNAPSHOT</version>
+      <version>1.19-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
@@ -73,7 +95,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>packetlib</artifactId>
-      <version>2.1</version> <!-- Copied from MCProtocolLib -->
+      <version>3.0</version> <!-- Copied from MCProtocolLib -->
       <scope>compile</scope>
     </dependency>
 
@@ -92,6 +114,14 @@
       <artifactId>dirty</artifactId>
       <version>0.1-SNAPSHOT</version>
       <scope>provided</scope>
+    </dependency>
+
+    <!-- Math -->
+    <dependency>
+      <groupId>com.nukkitx</groupId>
+      <artifactId>math</artifactId>
+      <version>1.1.1</version>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
@@ -134,6 +164,7 @@
                   <include>com.github.steveice10:mcauthlib</include>
 		  <include>net.kyori:adventure-text-serializer-gson-legacy-impl</include>
 		  <include>net.kyori:adventure-nbt</include>
+                  <include>com.nukkitx:math</include>
                 </includes>
               </artifactSet>
               <filters>
@@ -172,6 +203,12 @@
                   <artifact>net.kyori:adventure-nbt</artifact>
                   <includes>
                     <include>**</include>
+                  </includes>
+                </filter>
+                <filter>
+                  <artifact>com.nukkitx:math</artifact>
+                  <includes>
+                    <include>com/nukkitx/math/**</include>
                   </includes>
                 </filter>
               </filters>
