--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,7 +8,7 @@ api-version: 1.19
 author: StarTux
 website: https://github.com/StarTux/Decorator
 
-depend: [Dirty]
+depend: []
 softdepend: [Worlds]
 
 commands:
