--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.20.2-R0.1-SNAPSHOT</version>
+      <version>1.20.4-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>com.github.steveice10</groupId>
       <artifactId>mcprotocollib</artifactId>
-      <version>1.20.2-1-SNAPSHOT</version>
+      <version>1.20.4-1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
@@ -85,6 +85,7 @@
     </dependency>
 
     <!-- PacketLib https://github.com/GeyserMC/PacketLib
+	 Removed?!
     -->
     <dependency>
       <groupId>com.github.steveice10</groupId>
